--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
 		<% end %>
 		<%= yield %>
 		<%= render 'layouts/footer' %>
+
+		<% if current_user %>
+		Welcome <%= current_user.name %>!
+		<%= link_to "Sign Out", signout_path %>
+		<% else %>
+		<%= link_to "Sign in with Twitter", "/auth/twitter" %>
+		<% end %>
+
 		<%= debug(params) if Rails.env.development? %>
 	</div>
 </body>
