--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,6 +21,6 @@
       <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
 
-    <%= gravatar_for @user %>
+    <%= showProfImage @user %>
     <a href="http://gravatar.com/emails">change</a>
   </div>
