--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,9 @@
 		<section>
 			<%= render 'shared/micropost_form' %>
 		</section>
+		<section>
+			<%= render 'shared/comment_form' %>
+		</section>
 	</aside>
 	<div class="span8">
 		<h3>Micropost Feed</h3>
