--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,23 @@
 @import "bootstrap";
 
+@font-face{
+  font-family: "mplus-1c-thin";
+  src: url(http://l0o0l.info/cs/jouho2/mplus-1c-thin.ttf) format("opentype");
+}
+
+body,html{
+  font-family:"mplus-1c-thin";
+}
+h3{
+  font-size: 78px;
+}
+header{
+  font-family:"mplus-1c-light";
+}
+.span4{
+  margin-top:15px;
+}
+
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
@@ -72,7 +90,7 @@ aside {
       line-height: 1;
     }
     h1 {
-      font-size: 1.4em;
+      font-size: 2em;
       text-align: left;
       letter-spacing: -1px;
       margin-bottom: 3px;
@@ -142,6 +160,7 @@ input {
 }
 .content {
   display: block;
+  font-size: 22px;
 }
 .timestamp {
   color: $grayLight;
