--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,7 +1,7 @@
 <li id="<%= feed_item.id %>">
   <%= link_to showProfImage feed_item.user%>
     <span class="user">
-      <%= link_to feed_item.user.name, feed_item.user %>
+      <%= link_to feed_item.user.name+' ( @'+feed_item.user.nickname+' )' , feed_item.user %>
     </span>
     <span class="content"><%= link_to feed_item.content, feed_item %></span>
     <span class="timestamp">
