--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -2,7 +2,8 @@
 	<%= showProfImage current_user %>
 </a>
 <h1>
-	<%#=  current_user.name %>
+	<%= link_to current_user.name , current_user%><br>
+	<%#= link_to '  @'+current_user.nickname+' ' , current_user  %>
 </h1>
 <span>
 	<%= link_to "view my profile", current_user %>
