--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -160,7 +160,8 @@ input {
 }
 .content {
   display: block;
-  font-size: 22px;
+  font-size: 32px;
+  line-height: 30px;
 }
 .timestamp {
   color: $grayLight;
