--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,15 +5,15 @@
 			<h1>
 				<%= showProfImage @user %>
 				<%= @user.name %>
-				<%= @user.created_at %>
-				<%= @user.provider %>
+				<%#= @user.created_at %>
+				<%= link_to "link to "+ @user.provider, "http://twitter.com/"+@user.nickname, :target=>["_blank"] %>
 				<%#= @user.email %>
 			</h1>
 		</section>
 	</aside>
 	<div class="span8">
 		<% if @user.microposts.any? %>
-		<h3>Microposts (<%= @user.microposts.count %>)</h3>
+		<h3>Wanna Do (<%= @user.microposts.count %>)</h3>
 		<ol class="microposts">
 			<%= render @microposts %>
 		</ol>
