--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,7 +1,16 @@
 <%= form_for(@micropost) do |f| %>
 <%= render 'shared/error_messages', object: f.object %>
 <div class="field">
+	やりたいこと(140文字以内)
 	<%= f.text_area :content, placeholder: "Compose new micropost..." %>
+	<hr>
+	以下オプションくコ:彡<br>
+	詳細(65535文字以内):
+	<%= f.text_area :detail, placeholder: "Compose detailed " %>
+
+	やりたい度:
+	<%= f.select :desire, やりたい度: ['100%', 2,3]  %>
+
 </div>
 <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
