--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -5,6 +5,7 @@
 	<%= f.text_area :content, placeholder: "Compose new micropost..." %>
 	<hr>
 	以下オプションくコ:彡<br>
+	(表示非表示でトグる) <br>
 	詳細(65535文字以内):
 	<%= f.text_area :detail, placeholder: "Compose detailed " %>
 
