--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,22 +10,22 @@
 
 	</aside>
 	<div class="span8">
-		<h3>Honey Circle</h3>
+		<h3>やりたいこと一覧</h3>
 		<%= render 'shared/feed' %>
 	</div>
 </div>
 
 <% else %>
 <div class="center hero-unit">
-	<h1>Welcome to the Sample App</h1>
+	<h1>Welcome to "Honey Circle"</h1>
 
 	<h2>
-		This is the home page for the
-		<a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
-		sample application.
+		はじめての方は
+		<a href="/about">about</a>
+		までお飛びなさい
 	</h2>
 
-	<%= link_to "Sign up now!", signup_path,
+	<%= link_to "Sign up now with ついったあかうんと!", signup_path,
 	class: "btn btn-large btn-primary" %>
 </div>
 
