--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,9 @@
 <li>
+	<%#= link_to showProfImage comment.user%>
+        <%= link_to image_tag(comment.user.image ,:size => "22x22"), comment.user %>
+	<span class="user">
+		<%= link_to comment.user.name+' ( @'+comment.user.nickname+' )' , comment.user %>
+	</span>
 	<span class="content"><%= comment.content %></span>
 	<span class="timestamp">
 		Posted <%= time_ago_in_words(comment.created_at) %> ago.
