--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -4,13 +4,58 @@
       <%= link_to feed_item.user.name+' ( @'+feed_item.user.nickname+' )' , feed_item.user %>
     </span>
     <span class="content"><%= link_to feed_item.content, feed_item %></span>
+
+  <% if current_user?(feed_item.user) %>
+    <%= link_to "delete", feed_item, method: :delete, data: { confirm: "You sure?" }, title: feed_item.content, :class => 'delete_button' %>
+    <!-- 一緒にやりたい人がいる場合 -->
+    <div class="staredInfo">
+      <% if feed_item.stars.length > 0 %>
+    <br>
+      <p style='float: left;'>一緒にやりたい！: <%= feed_item.stars.length %>人 </p>
+      <% feed_item.stars.each do |s| %>
+      <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user %>
+      <% end %>
+      <% end %>
+    </div>
+    <!-- 興味ある人がいる場合 -->
+    <% if feed_item.interests.length > 0 %>
+    <br>
+    <div class="interestedInfo">
+      <p style='float: left;'>興味ある！: <%= feed_item.interests.length %>人 </p>
+      <% feed_item.interests.each do |s| %>
+        <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user %>
+        <% end %>
+      </div>
+    <% end %>
+  <% else %>
+  <div class='stars'>
+    <%= form_tag({:controller => 'star', :action => 'toggle_star'}, {:name => 'toggle_star', :remote => true, :class => 'star_button'}) do %>
+    <input type="hidden" value="<%= feed_item.id %>" name="micropost_id">
+    <%= submit_tag "一緒にやりたい！" %>
+    <% end %>
+    <div class='starInfo'>
+      <%= feed_item.stars.length %>人
+      <% feed_item.stars.each do |s| %>
+      <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user %>
+      <% end %>
+    </div>
+  </div>
+    <!-- 興味ある！ -->
+    <br>
+    <div class='interests'>
+      <%= form_tag({:controller => 'interest', :action => 'toggle_interest'}, {:name => 'toggle_interest', :remote => true, :class => 'interest_button'}) do %>
+      <input type="hidden" value="<%= feed_item.id %>" name="micropost_id">
+      <%= submit_tag "興味ある！" %>
+      <% end %>
+      <div class='interestInfo'>
+        <%= feed_item.interests.length %>人
+        <% feed_item.interests.each do |s| %>
+        <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user %>
+        <% end %>
+      </div>
+    </div>
+    <% end %>
     <span class="timestamp">
       Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
     </span>
-
-  <% if current_user?(feed_item.user) %>
-    <%= link_to "delete", feed_item, method: :delete,
-                                     data: { confirm: "You sure?" },
-                                     title: feed_item.content %>
-  <% end %>
-</li>
+  </li>
