--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,9 +24,13 @@
 		<a href="/about">about</a>
 		までお飛びなさい
 	</h2>
-
-	<%= link_to "Sign up now with ついったあかうんと!", signup_path,
+	<% if current_user %>
+	Welcome <%= current_user.name %>!
+	<%= link_to "Sign Out", signout_path %>
+	<% else %>
+	<%= link_to "Sign up now with ついったあかうんと!", "/auth/twitter",
 	class: "btn btn-large btn-primary" %>
+	<% end %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
