--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 
 	</aside>
 	<div class="span8">
-		<h3>やりたいこと一覧</h3>
+		<h3>やりたいこと(<%= Micropost.all.length %>)</h3>
 		<%= render 'shared/feed' %>
 	</div>
 </div>
