toggle inset-outset-starSubmit in a micropost page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -297,3 +297,11 @@ aside {
 .span4 input[type="submit"],{
   width: 90px;
 }
+
+//2014-01-01_20-05-53
+.star_submit{
+  // background:url(http://l0o0l.info/material/icon/starIcon.png) no-repeat
+}
+.already{
+  border:inset;
+}
