--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -7,7 +7,7 @@
 	以下オプションくコ:彡<br>
 	(表示非表示でトグる) <br>
 	詳細(65535文字以内):
-	<%= f.text_area :detail, placeholder: "80文字で書ききれない詳細をこちらに" %>
+	<%= f.text_area :detail, placeholder: "80文字で書ききれない場合は詳細をこちらに" %>
 
 	<!-- やりたい度: -->
 	<%#= f.select :desire, やりたい度: ["1. かなりやりたいヽ(‘ω’)ﾉ三ヽ(‘ω’)ﾉ", '2. やりたい(｀・ω・´)', '3. ちょっとやりたい(´・ω・｀)']  %>
