--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,12 +17,15 @@
 
 <% else %>
 <div class="center hero-unit">
-	<h1>Welcome to "Honey Circle"</h1>
-
+	<h1>学生のうちにしか<br>
+		できないこと、<br>
+		ありませんか。</h1>
+<br>
 	<h2>
-		はじめての方は
+<!-- 		はじめての方は
 		<a href="/about">about</a>
-		までお飛びなさい
+		までお飛びなさい -->
+	Honey Circle. 	は早稲田大学の情報なんとか学科の人向けに作られたサービスです。
 	</h2>
 	<% if current_user %>
 	Welcome <%= current_user.name %>!
