--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -4,6 +4,6 @@
 <div class="field">
 	<%= f.text_area :content, placeholder: "Compose new comment..." %>
 </div>
-<%= f.submit "Post", class: "btn btn-large btn-primary" %>
+<%= f.submit "Post", class: "btn btn-2i" %>
 <% @comment.micropost_id = @micropost.id %>
 <% end %>
