--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -4,6 +4,9 @@
       <%= link_to feed_item.user.name+' ( @'+feed_item.user.nickname+' )' , feed_item.user %>
     </span>
     <span class="content"><%= link_to feed_item.content, feed_item %></span>
+    <% if feed_item.detail? %>
+      <span>(詳細文あり)</span>
+    <% end %>
 
   <% if current_user?(feed_item.user) %>
     <%= link_to "delete", feed_item, method: :delete, data: { confirm: "You sure?" }, title: feed_item.content, :class => 'delete_button' %>
@@ -59,6 +62,11 @@
         <span class='interestsNum'><%= feed_item.interests.length %></span>人
         <% feed_item.interests.each do |s| %>
         <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user %>
+        <% if s.user == current_user %>
+            <script>
+              $('#'+<%= feed_item.id %>).children('.interests').children('form').children('input').addClass('already')
+            </script>
+          <% end %>
         <% end %>
       </div>
     </div>
