--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,9 @@
 }
 
 
+*{
+  outline:none;
+}
 
 body,html{
   font-weight: 100;
@@ -67,6 +70,9 @@ header{
 
 .navbar-inverse .brand, .navbar-inverse .nav > li > a{
   text-shadow: none;
+  -webkit-transform:rotate(8deg);
+  padding:17px 15px 15px;
+  outline: none;
 }
 
 input[type="submit"]{
@@ -283,14 +289,14 @@ aside {
   outline: none;
   background:#0C9EE7;
   box-shadow: 0 4px #025883;
-  top: 2px;
+  // top: 2px;
   color:#fff;
 }
 
 .btn-2i:active {
   background:#0C9EE7;
   box-shadow: 0 0 #025883;
-  top: 6px;
+  top: 4px;
   color:#fff;
 
 }
@@ -308,4 +314,24 @@ aside {
 
 .hero-unit h1{
   line-height: 78px;
+}
+
+.navbar .pull-right > li > .dropdown-menu{
+  -webkit-transform: rotate(8deg);
+}
+
+.hero-unit{
+  background: #fff;
+}
+
+.btn-signin{
+  width:105px;
+  padding: 16px 4px 3px;
+}
+
+.signin{
+  margin-left: 10px;
+}
+.navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus,.navbar .nav > li > a:focus, .navbar .nav > li > a:hover{
+  background-color: #333;
 }
