--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,16 +25,16 @@
 <!-- 		はじめての方は
 		<a href="/about">about</a>
 		までお飛びなさい -->
-	Honey Circle. 	は早稲田大学の情報なんとか学科の人向けに作られたサービスです。
+	Honey Circle. は早稲田大学の情報なんとか学科の人向けに作られたサービスです。
 	</h2>
 	<% if current_user %>
 	Welcome <%= current_user.name %>!
 	<%= link_to "Sign Out", signout_path %>
 	<% else %>
-	<%= link_to "Sign up now with ついったあかうんと!", "/auth/twitter",
-	class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign up now with ついったアカウント!", "/auth/twitter",
+	class: "btn btn-2i btn-signin" %>
 	<% end %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<%#= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
 <% end %>
