--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,9 @@
 		<section>
 			<%= render 'shared/micropost_form' %>
 		</section>
+	<hr>
+
+	<%= render 'layouts/newsfeed' %>
 
 	</aside>
 	<div class="span8">
