--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,6 +15,7 @@
 body,html{
   font-weight: 100;
   font-family: sans-serif;
+  word-break: break-word;
 }
 h1,h2,h3,h4,h5,h6, .content{
   font-family:"mplus-1c-thin";
@@ -35,6 +36,9 @@ ol{
   margin:30px 5px 14px 24px;
 }
 
+.field span{
+  display:inline;
+}
 
 .starInfo, .interestInfo{
   float: left;
@@ -82,6 +86,19 @@ input[type="submit"]{
   margin:60px 0 0;
 }
 
+.count{
+  float: right;
+  color:#888;
+}
+.newsfeeds h3{
+  margin: 45px 0 20px;
+}
+.newsfeed{
+  clear:both;
+}
+.flr{
+  float: right;
+}
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
@@ -159,6 +176,7 @@ aside {
       // letter-spacing: -1px;
       margin-bottom: 3px;
       margin-top: 0px;
+      word-break: break-word;
     }
   }
 }
@@ -175,7 +193,7 @@ form{
 }
 
 input, textarea, select, .uneditable-input {
-  border: 1px ridged #5C4949;
+  // border: 1px ridged #000 ;
   width: 100%;
   // padding: 10px;
   // margin: 15px 0;
@@ -187,6 +205,7 @@ input, textarea, select, .uneditable-input {
 }
 
 input {
+  border:1px outset;
   // height: auto !important;
 }
 
@@ -231,8 +250,11 @@ input {
     clear:both;
   }
 }
+.contentWrapper{
+  margin:15px 0;
+}
 .content {
-  display: block;
+  // display: block;
   font-size: 32px;
   line-height: 37px;
   margin:15px 0;
@@ -301,7 +323,10 @@ aside {
   box-shadow: 0 0 #025883;
   top: 4px;
   color:#fff;
-
+}
+.btn-2i:focus {
+  color:#fff;
+  background:#0C9EE7;
 }
 button.btn, input[type="submit"].btn{
   width: 90px;
@@ -309,6 +334,7 @@ button.btn, input[type="submit"].btn{
 
 .span4 input[type="submit"],{
   width: 90px;
+  outline: 0px;
 }
 
 //2014-01-01_20-05-53
@@ -316,7 +342,7 @@ button.btn, input[type="submit"].btn{
   // background:url(http://l0o0l.info/material/icon/starIcon.png) no-repeat
 }
 .already{
-  border:inset;
+  border:1px inset;
 }
 
 .hero-unit h1{
