--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.jp/">Honey Circle</a>
-    by Daichi Katayama
+    <!-- <a href="http://railstutorial.jp/">Honey Circle</a> -->
+    <!-- by Daichi Katayama -->
   </small>
   <nav>
     <ul>
