--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,5 +1,5 @@
 <li>
-	<span class="content"><%= micropost.content %></span>
+	<span class="content"><%= link_to micropost.content, micropost %></span>
 	<span class="timestamp">
 		Posted <%= time_ago_in_words(micropost.created_at) %> ago.
 	</span>
