--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
 	</aside>
 	<div class="span8">
 		<% if @user.microposts.any? %>
-		<h3>Wanna Do (<%= @user.microposts.count %>)</h3>
+		<h3>@<%= @user.nickname %> (<%= @user.microposts.count %>)</h3>
 		<ol class="microposts">
 			<%= render @microposts %>
 		</ol>
